5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1706_3059.log
== TEST (2019-04-29 18:17:24) 
-- CODE:
valor =float(input("consummo: "))
if a > 0 and a 
-- ERROR:
File "XXXX", line 2
    if a > 0 and a 
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:18:53) 
-- CODE:
valor =float(input("consummo: "))
if a > 0 and a*>0
-- ERROR:
File "XXXX", line 2
    if a > 0 and a*>0
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:28:10) 
-- CODE:
valor =float(input("consummo: "))
if a > 0 and a < 30
elif(valor == ("0,100* R$ 1,20 + 100: ")
	  print(valor)
elif(valor == ]"100,200] * R$ 1,30 + 10,00: ")
	  print(valor)
elif("]200,300] * R$ 1,40 + 20,00:")
	  print(valor)
elif("")
-- ERROR:
File "XXXX", line 2
    if a > 0 and a < 30
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:28:21) 
-- CODE:
valor =float(input("consummo: "))
if a > 0 and a < 30
elif(valor == ("0,100* R$ 1,20 + 100: ")
	  print(valor)
elif(valor == ]"100,200] * R$ 1,30 + 10,00: ")
	  print(valor)
elif("]200,300] * R$ 1,40 + 20,00:")
	  print(valor)
elif("")
-- ERROR:
File "XXXX", line 2
    if a > 0 and a < 30
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:31:47) 
-- CODE:
valor =float(input("consummo: "))
if a > 0 and a < 30
elif(valor == ("0,100* R$ 1,20 + 100: ")
	  print(valor)
elif(valor == ]"100,200] * R$ 1,30 + 10,00: ")
	  print(valor)
elif("]200,300] * R$ 1,40 + 20,00:")
	  print(valor)
elif("")
-- ERROR:
File "XXXX", line 2
    if a > 0 and a < 30
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:32:00) 
-- CODE:
valor =float(input("consummo: "))
elif(valor == ("0,100* R$ 1,20 + 100: ")
	  print(valor)
elif(valor == ]"100,200] * R$ 1,30 + 10,00: ")
	  print(valor)
elif("]200,300] * R$ 1,40 + 20,00:")
	  print(valor)
elif("")
-- ERROR:
File "XXXX", line 2
    elif(valor == ("0,100* R$ 1,20 + 100: ")
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:33:27) 
-- CODE:
valor =float(input("consummo: "))
elif(valor == ("0,100* R$ 1,20 + R$100: ")
	  print(valor)
elif(valor == ]"100,200] * R$ 1,30 + R$10,00: ")
	  print(valor)
elif("]200,300] * R$ 1,40 + R$ 20,00:")
	  print(valor)
elif("")
-- ERROR:
File "XXXX", line 2
    elif(valor == ("0,100* R$ 1,20 + R$100: ")
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:45:26) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >=0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <=300):
   tarifa = 1.40
	taxa = 20
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- ERROR:
File "XXXX", line 17
    taxa = 20
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:45:33) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >=0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <=300):
   tarifa = 1.40
	taxa = 20
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- ERROR:
File "XXXX", line 17
    taxa = 20
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:46:01) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >=0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <= 300):
   tarifa = 1.40
	taxa = 20
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- ERROR:
File "XXXX", line 17
    taxa = 20
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:47:24) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >= 0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <= 300):
   tarifa = 1.40
	taxa = 20
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- ERROR:
File "XXXX", line 17
    taxa = 20
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:48:30) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >= 0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <= 300):
   tarifa = 1.40
	taxa = 20
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- ERROR:
File "XXXX", line 17
    taxa = 20
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:48:56) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >= 0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <= 300):
   tarifa = 1.40
	taxa  = 20
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- ERROR:
File "XXXX", line 17
    taxa  = 20
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:49:10) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >= 0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <= 300):
   tarifa = 1.40
	taxa  = 20
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- ERROR:
File "XXXX", line 17
    taxa  = 20
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:49:50) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >= 0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <= 300):
   tarifa = 1.40
	taxa  = 20
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- ERROR:
File "XXXX", line 17
    taxa  = 20
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:51:37) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >= 0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <= 300):
   tarifa = 1.40
	taxa  = 20
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- ERROR:
File "XXXX", line 17
    taxa  = 20
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:52:25) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >= 0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <= 300):
   tarifa = 1.40
	taxa  = 20
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- ERROR:
File "XXXX", line 17
    taxa  = 20
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:52:57) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >= 0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <= 300):
   tarifa = 1.40
	taxa  = 2.0
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- ERROR:
File "XXXX", line 17
    taxa  = 2.0
              ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:53:04) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >= 0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <= 300):
   tarifa = 1.40
	taxa  = 20
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- ERROR:
File "XXXX", line 17
    taxa  = 20
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:53:33) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >= 0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <= 300):
   tarifa = 1.40
	taxa  = 20.00
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- ERROR:
File "XXXX", line 17
    taxa  = 20.00
                ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:53:46) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >= 0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <= 300):
   tarifa = 1.40
	taxa  = 20
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- ERROR:
File "XXXX", line 17
    taxa  = 20
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:54:20) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >= 0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <= 300):
   tarifa = 1.40
	taxa  = 20
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- ERROR:
File "XXXX", line 17
    taxa  = 20
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:54:24) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >= 0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <= 300):
   tarifa = 1.40
	taxa  = 
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- ERROR:
File "XXXX", line 17
    taxa  = 
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:54:33) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >= 0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <= 300):
   tarifa = 1.40
	taxa  = 20
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- EXECUTION TIME:
0.204876
-- ERROR:
  File "/home/codebench/codes/1706/3059/main.py", line 17
    taxa  = 20
             ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:54:37) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >= 0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <= 300):
   tarifa = 1.40
	taxa  = 20
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- EXECUTION TIME:
0.189153
-- ERROR:
  File "/home/codebench/codes/1706/3059/main.py", line 17
    taxa  = 20
             ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:54:40) 
-- CODE:
x = float(input("consumo de minutos: "))



if(x >= 0) and (x <= 100):
	tarifa = 1.20
	taxa = 1
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 0) and (x <= 200):
	tarifa = 1.30
	taxa = 10
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 200) and (x <= 300):
   tarifa = 1.40
	taxa  = 20
	valor = (x * tarifa) + taxa
	print(round(valor,2))
elif(x > 300):
	tarifa = 1.50
	taxa = 25
	valor = (x * tarifa) + taxa
	print(round(valor,2))
-- ERROR:
File "XXXX", line 17
    taxa  = 20
             ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
